# webauthn

./: .envrc  .gitattributes  .gitignore  .hlint.yaml  Main.hs  NOTES  NOTES.md  README.md  cabal.project  cabal.project.freeze  changelog.md  default.nix  entries.json  fido2.cabal  fido2.nix  hie.yaml  liquidhaskell-shell.nix  readme.md  repro.cabal  shell.nix  stack.yaml  webauthn.cabal
.github/workflows/: build.yml
fido/: Main.hs
fido/Codec/CBOR/: JSON.hs
fido/Crypto/: Fido2.hs
fido/Crypto/Fido2/: Assertion.hs  Attestation.hs  AttestationNew.hs  EncodingUtils.hs  Error.hs  MDS.hs  Model.hs  Protocol.hs  PublicKey.hs  Registry.hs  Signature.hs  UAF.hs  WebIDL.hs
fido/Crypto/Fido2/Attestation/: AndroidKey.hs  Error.hs  FidoU2F.hs  None.hs  Packed.hs
fido/Crypto/Fido2/Attestation/AndroidKey/: Statement.hs
fido/Crypto/Fido2/Attestation/FidoU2F/: Statement.hs
fido/Crypto/Fido2/Attestation/Packed/: Statement.hs
fido/Crypto/Fido2/AttestationNew/: AndroidKey.hs  FidoU2F.hs  Format.hs  None.hs
fido/Crypto/Fido2/Client/: Conversion.hs  Haskell.hs  JavaScript.hs  WebauthnType.hs
fido/Crypto/Fido2/MDS/: Model.hs
fido/Crypto/Fido2/Metadata/: Blob.hs  Model.hs
fido/Crypto/Fido2/Metadata/Service/: IDL.hs  Processing.hs
fido/Crypto/Fido2/Metadata/Statement/: IDL.hs
fido/Crypto/Fido2/Model/: JavaScript.hs  WebauthnType.hs
fido/Crypto/Fido2/Model/Binary/: Decoding.hs  Encoding.hs
fido/Crypto/Fido2/Model/JavaScript/: Decoding.hs  Encoding.hs  Types.hs
fido/Crypto/Fido2/Operations/: Assertion.hs  Attestation.hs  Common.hs
fido/Crypto/Fido2/Operations/Attestation/: AndroidKey.hs  Apple.hs  FidoU2F.hs  None.hs  Packed.hs
infra/: configuration.nix  subdomains.json
nix/: haskell-deps.nix  sources.json
root-certs/tpm/AMD/: AMD-Pluton-Global-Factory-ICA.crt  AMD-Root-CA.crt
root-certs/tpm/Intel/: ODCA_CA2_OSSE_Intermediate.crt
root-certs/tpm/NationZ/: NSEccRootCA001.crt  NSRsaRootCA001.crt  NSTPMEccRootCA001.crt  NSTPMRsaRootCA001.crt
root-certs/tpm/Nuvoton/: Nuvoton TPM Root CA 2012.cer
root-certs/tpm/QC/: qwes_prod_ek_provisioning_root.crt
server/: .gitignore  Database.hs  Main.hs  PendingOps.hs  index.html  index.js  package.json  run.sh  server.cabal  solokey-entries.json
server/src/: Database.hs  Main.hs  MetadataFetch.hs  PendingCeremonies.hs  PendingOps.hs
server/www/: authenticated.html  authenticated.js  style.css  unauthenticated.html  unauthenticated.js
src/: Module.hs
src/Crypto/: WebAuthn.hs
src/Crypto/WebAuthn/: AttestationStatementFormat.hs  DateOrphans.hs  Encoding.hs  EncodingUtils.hs  FidoRegistry.hs  Identifier.hs  Metadata.hs  Model.hs  Operation.hs  PublicKey.hs  Registries.hs  Registry.hs  SubjectKeyIdentifier.hs  ToJSONOrphans.hs  UAF.hs  WebIDL.hs
src/Crypto/WebAuthn/AttestationStatementFormat/: AndroidKey.hs  AndroidSafetyNet.hs  Apple.hs  FidoU2F.hs  None.hs  Packed.hs  TPM.hs
src/Crypto/WebAuthn/Cose/: Algorithm.hs  Key.hs  PublicKey.hs  PublicKeyWithSignAlg.hs  Registry.hs  SignAlg.hs
src/Crypto/WebAuthn/Cose/Internal/: Registry.hs  Verify.hs
src/Crypto/WebAuthn/Encoding/: Binary.hs  Strings.hs  WebAuthnJson.hs
src/Crypto/WebAuthn/Encoding/Binary/: Decoding.hs  Encoding.hs
src/Crypto/WebAuthn/Encoding/Internal/: WebAuthnJson.hs
src/Crypto/WebAuthn/Internal/: DateOrphans.hs  ToJSONOrphans.hs  Utils.hs  X509Validation.hs
src/Crypto/WebAuthn/Metadata/: FidoRegistry.hs  UAF.hs  WebIDL.hs
src/Crypto/WebAuthn/Metadata/Service/: Decode.hs  IDL.hs  Processing.hs  Types.hs  WebIDL.hs
src/Crypto/WebAuthn/Metadata/Statement/: Decode.hs  IDL.hs  Types.hs  WebIDL.hs
src/Crypto/WebAuthn/Model/: Defaults.hs  Identifier.hs  JavaScript.hs  Kinds.hs  Types.hs  WebIDL.hs  WebauthnJson.hs  WebauthnType.hs
src/Crypto/WebAuthn/Model/Binary/: Decoding.hs  Encoding.hs
src/Crypto/WebAuthn/Model/JavaScript/: Decoding.hs  Encoding.hs  Types.hs
src/Crypto/WebAuthn/Model/WebIDL/: Decoding.hs  Encoding.hs  Types.hs
src/Crypto/WebAuthn/Model/WebIDL/Internal/: Convert.hs  Decoding.hs  Encoding.hs
src/Crypto/WebAuthn/Model/WebIDL/Internal/Binary/: Decoding.hs  Encoding.hs
src/Crypto/WebAuthn/Operation/: Authentication.hs  CredentialEntry.hs  Registration.hs
src/Crypto/WebAuthn/Operations/: Assertion.hs  Attestation.hs  Common.hs  CredentialEntry.hs
src/Crypto/WebAuthn/Operations/Attestation/: AndroidKey.hs  AndroidSafetyNet.hs  Apple.hs  FidoU2F.hs  None.hs  Packed.hs  TPM.hs
tests/: AttestationSpec.hs  Authenticator.hs  Client.hs  Emulation.hs  Encoding.hs  Main.hs  MetadataSpec.hs  PublicKeySpec.hs  Spec.hs  Util.hs
tests/Client/: PrivateKey.hs
tests/Emulation/: Authenticator.hs  Client.hs
tests/Emulation/Authenticator/: Arbitrary.hs
tests/Emulation/Authenticator/AttestationStatementFormat/: Apple.hs
tests/Emulation/Client/: Arbitrary.hs  PrivateKey.hs
tests/Spec/: Key.hs  Types.hs  Util.hs
tests/fixtures/: attestation_object_base64
tests/fixtures/login-complete/: 01.json  02.json
tests/fixtures/register-complete/: 01.json
tests/golden-metadata/big/: blob-with-errors.jwt  blob.jwt  origin  payload.json
tests/golden-metadata/small/: blob.jwt  origin.txt  payload.json  root.crt
tests/responses/assertion/: 01-none-empty-user-handle.json  01-none.json
tests/responses/attestation/: 01-none.json  02-packed.json  04-u2f.json  05-apple.json  android-key-01.json  android-key-02.json  android-safetynet-01.json  apple-02.json  conditional-create.json  packed-01.json  packed-02.json  packed-03.json  regression-150.json  tpm-es256-01.json  tpm-rs1-01.json  u2f-02.json  u2f-03.json  u2f-04.json  u2f-05.json  with-credprops.json  with-transports.json  without-aaguid.json
