cabal-version: 3.0
name: fido2
version: 0.1.0.0
author: Arian van Putten
maintainer: arian.vanputten@gmail.com
build-type: Simple

common sanity
  default-language: Haskell2010
  build-depends: base
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wno-name-shadowing
  default-extensions:
    DerivingStrategies
    DerivingVia
    DeriveAnyClass
    DeriveGeneric
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    TypeApplications

library
  import: sanity
  hs-source-dirs: fido
  build-depends:
    binary,
    aeson,
    deriving-aeson,
    asn1-encoding,
    asn1-parse,
    asn1-types,
    bytestring,
    base64-bytestring,
    containers,
    cryptonite,
    memory,
    cborg,
    serialise,
    text,
    unordered-containers,
    x509,
    x509-validation,
    random,
    singletons,
    time,
    x509,
    x509-validation,
    x509-store,
    -- https://github.com/frasertweedale/hs-jose/pull/103#issuecomment-923624548
    jose >= 0.8.5,
    lens,
    mtl,
    validation,
  exposed-modules:
    Crypto.Fido2.Operations.Assertion,
    Crypto.Fido2.Operations.Attestation,
    Crypto.Fido2.Operations.Attestation.AndroidKey,
    Crypto.Fido2.Operations.Attestation.None,
    Crypto.Fido2.Operations.Attestation.Packed,
    Crypto.Fido2.Operations.Attestation.FidoU2F,
    Crypto.Fido2.Operations.Common,
    Crypto.Fido2.EncodingUtils,
    Crypto.Fido2.Metadata.Blob,
    Crypto.Fido2.Metadata.Model,
    Crypto.Fido2.Model,
    Crypto.Fido2.Model.JavaScript,
    Crypto.Fido2.Model.JavaScript.Decoding,
    Crypto.Fido2.Model.JavaScript.Encoding,
    Crypto.Fido2.Model.JavaScript.Types,
    Crypto.Fido2.Model.WebauthnType,
    Crypto.Fido2.PublicKey

executable server
  import: sanity
  hs-source-dirs: server
  main-is: Main.hs
  other-modules:
    Database,
    PendingOps

  build-depends:
    aeson,
    base64-bytestring,
    binary,
    cborg,
    clock,
    bytestring,
    containers,
    cookie,
    cryptonite,
    fido2,
    http-types,
    mtl,
    random,
    scotty,
    sqlite-simple,
    stm,
    text,
    transformers,
    uuid,
    validation,
    wai,
    wai-middleware-static,
    warp

test-suite tests
  import: sanity
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    PublicKeySpec,
    MetadataSpec,
    Spec.Types,
    Spec.Util
  build-depends:
    aeson,
    bytestring,
    directory,
    fido2,
    filepath,
    QuickCheck,
    hspec,
    hspec-expectations-json,
    cborg,
    cborg-json,
    cryptonite,
    serialise,
    quickcheck-instances,
    asn1-encoding,
    text,
    memory,
    mtl,
    x509,
    pem,
    validation
