cabal-version: 2.4
name: server
version: 0.1.0.0

common sanity

executable server
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Database,
    MetadataFetch,
    PendingCeremonies
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wno-name-shadowing
    -Wcompat
    -Wincomplete-uni-patterns
  default-extensions:
    DerivingStrategies
    DerivingVia
    DeriveAnyClass
    DeriveGeneric
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    TypeApplications

  build-depends:
    base                  >= 4.13.0 && < 4.17,
    aeson                 >= 1.4.7 && <= 2.1.0.0,
    bytestring            >= 0.10.10 && < 0.12,
    containers            >= 0.6.2 && < 0.7,
    binary                >= 0.8.7 && < 0.9,
    text                  >= 1.2.4 && < 1.3,
    transformers          >= 0.5.6 && < 0.6,
    mtl                   >= 2.2.2 && < 2.3,
    aeson-pretty          >= 0.8.8 && < 0.9,
    base64-bytestring     >= 1.2.1 && < 1.3,
    clock                 >= 0.8 && < 0.9,
    cookie                >= 0.4.5 && < 0.5,
    cryptonite            >= 0.27 && < 0.31,
    hourglass             >= 0.2.12 && < 0.3,
    http-client           >= 0.6.4 && < 0.8,
    stm                   >= 2.5.0 && < 2.6,
    http-types            >= 0.12.3 && < 0.13,
    http-client-tls       >= 0.3.5 && < 0.4,
    scotty                >= 0.11.6 && < 0.13,
    serialise             >= 0.2.3 && < 0.3,
    sqlite-simple         >= 0.4.18 && < 0.5,
    validation            >= 1.1 && < 1.2,
    wai-middleware-static >= 0.8.3 && < 0.10,
    webauthn,
